--- a/general/templates/general/home.html
+++ b/general/templates/general/home.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Ma Superbe Home page
+Accueil
 {% endblock %}
-
+{% load static %}
 {% block header %}
      <header class="masthead">
         <div class="container h-100">
@@ -78,8 +78,8 @@ Ma Superbe Home page
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
-                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                    <a class="portfolio-box" href="{% static 'dist/assets/img/portfolio/fullsize/1.jpg' %}"
+                        ><img class="img-fluid" src="{% static 'dist/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
@@ -87,8 +87,8 @@ Ma Superbe Home page
                     >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
-                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                    <a class="portfolio-box" href="{% static 'dist/assets/img/portfolio/fullsize/2.jpg' %}"
+                        ><img class="img-fluid" src="{% static 'dist/assets/img/portfolio/thumbnails/2.jpg' %}" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
@@ -96,8 +96,8 @@ Ma Superbe Home page
                     >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
-                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                    <a class="portfolio-box" href="{% static 'dist/assets/img/portfolio/fullsize/3.jpg' %}"
+                        ><img class="img-fluid" src="{% static 'dist/assets/img/portfolio/thumbnails/3.jpg' %}" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
@@ -105,8 +105,8 @@ Ma Superbe Home page
                     >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
-                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                    <a class="portfolio-box" href="{% static 'dist/assets/img/portfolio/fullsize/4.jpg' %}"
+                        ><img class="img-fluid" src="{% static 'dist/assets/img/portfolio/thumbnails/4.jpg' %}" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
@@ -114,8 +114,8 @@ Ma Superbe Home page
                     >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg"
-                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                    <a class="portfolio-box" href="{% static 'dist/assets/img/portfolio/fullsize/5.jpg' %}"
+                        ><img class="img-fluid" src="{% static 'dist/assets/img/portfolio/thumbnails/5.jpg' %}" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
@@ -123,8 +123,8 @@ Ma Superbe Home page
                     >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg"
-                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                    <a class="portfolio-box" href="{% static 'dist/assets/img/portfolio/fullsize/6.jpg' %}"
+                        ><img class="img-fluid" src="{% static 'dist/assets/img/portfolio/thumbnails/6.jpg' %}" alt="" />
                         <div class="portfolio-box-caption p-3">
                             <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Project Name</div>
